--- a/Modulo 2 CSS y maquetado avanzado/U2 CSS (parte 2)/css/estilos.css
+++ b/Modulo 2 CSS y maquetado avanzado/U2 CSS (parte 2)/css/estilos.css
@@ -4,217 +4,65 @@
     list-style: none;
 }
 
-/*--------------------- Encabezado ---------------------*/
-header{
-    position: relative;
-    margin: auto;
+h1{
+    text-align: center;
+}
+.container-uno{
+    width: 450px;
+    height: 450px;
+    border: 1px solid black;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.container-dos{
+    width: 450px;
+    height: 450px;
+    border: 1px solid black;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items:center;
+}
+
+.container-tres{
     width: 1000px;
-    height: 270px;
-    background: #444;
+    height: 150px;
+    border: 1px solid black;
+    margin: 50px auto;
+    display: flex;
+    justify-content:space-between;
 }
 
-header #foto{
-    position: absolute;
-    width: 200px;
-    height: 257px;
-    background: rgb(168, 168, 168); 
-    margin: 5px 15px;
-    border-radius: 30px;
-    /* UNIDAD 2 */
-    box-shadow: 0px 0px 20px rgb(255, 253, 253);
+.cajas{
+    
 }
 
-header h1{
-    position: absolute;
-    width: 400px;
-    height: 50px;
-    /* background: rgb(168, 168, 168);  */
-    margin: 60px 30px 30px 400px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
-    font-size: 40px;
-    color: rgb(218, 218, 218);
-}
-
-header h3{
-    position: absolute;
-    width: 400px;
-    height: 80px;
-    /* background: rgb(168, 168, 168);  */
-    margin: 150px 30px 30px 400px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
-    font-size: 22px;
-    color: rgb(218, 218, 218);
-}
-
-/*--------------------- Botones ---------------------*/
-nav{
-    position: relative;
-    margin: auto;
-    width: 1000px;
-    height: 60px;
-    /* background: rgb(119, 118, 118); */
-}
-
-#home{
-    float: left;
-    width: 200px;
-    line-height: 30px;
-    background: rgb(3, 241, 210);
-    text-align:center;
+#caja1{
+    width: 150px;
+    height: 150px;
+    background: red;
     color: white;
-    font-size: 19px;
-}
-
-#home a{
-    text-decoration: none;
-    color: white;
-    font-style: italic;
-}
-
-#estudios{
-    float: left;
-    width: 200px;
-    line-height: 30px;
-    background: rgb(3, 166, 241);
     text-align: center;
-    color: white;
-    font-size: 19px;
-}
-#estudios a{
-    text-decoration: none;
-    color: white;
-    font-style: italic;
+    line-height: 150px;
 }
 
-#cursos{
-    float: left;
-    width: 200px;
-    line-height: 30px;
-    background: rgb(174, 3, 241);
+#caja2{
+    width: 150px;
+    height: 150px;
+    background: blue;
+    color: white;
     text-align: center;
-    color: white;
-    font-size: 19px;
-}
-#cursos a{
-    text-decoration: none;
-    color: white;
-    font-style: italic;
+    line-height: 150px;
 }
 
-#experiencia{
-    float: left;
-    width: 200px;
-    line-height: 30px;
-    background: rgb(241, 146, 3);
+#caja3{
+    width: 150px;
+    height: 150px;
+    background: green;
+    color: white;
     text-align: center;
-    color: white;
-    font-size: 19px;
+    line-height: 150px;
 }
-#experiencia a{
-    text-decoration: none;
-    color: white;
-    font-style: italic;
-}
-
-#blog{
-    float: left;
-    width: 200px;
-    line-height: 30px;
-    background: rgb(146, 102, 52);
-    text-align: center;
-    color: white;
-    font-size: 19px;
-}
-#blog a{
-    text-decoration: none;
-    color: white;
-    font-style: italic;
-}
-
-/*--------------------- Articulo ---------------------*/
-article{
-    position:relative ;
-    margin: auto;
-    width: 1000px;
-    height: 325px;
-    background: #444;
-}
-
-article #izq{
-float: left;
-width: 399px;
-height: 325px;
-background: rgb(165, 164, 164);
-padding: 20px;
-box-sizing: border-box;
-}
-
-article #izq ul li{
-    width: 178px;
-    float: left;
-}
-
-article #izq h1{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: left;
-    padding: 20px;
-}
-
-article #der{
-    float: right;
-    width: 600px;
-    height: 325px;
-    background: rgb(226, 224, 224);
-    padding: 30px;
-    box-sizing: border-box;
-    columns: 2;
-    column-gap: 20px;
-}
-
-#der ul li{
-    margin: 10px;
-    list-style-image: url(/img/star.ico);
-    size
-}
-
-#der ol li{
-    list-style: decimal;
-    margin-top: 10px;
-    margin-left: 40px;
-    margin-bottom: 10px; 
-}
-
-
-/*--------------------- Footer ---------------------*/
-footer{
-    position: relative;
-    margin: auto;
-    width: 1000px;
-    height: 67px;
-    background:  rgb(119, 118, 118);
-}
-
-#footer1{
-    float: left;
-    width: 600px;
-    line-height: 67px;
-    background: rgb(226, 224, 224);
-    text-align: center;
-}
-
-#footer2{
-    float: right;
-    width: 399px;
-    line-height: 67px;
-    background: rgb(165, 164, 164);
-    text-align: center;
-}
-
-
-
-
-
-
-
